Create initial navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,12 @@
-<header>
-<h2>Judo Logo</h2>
-</header>
-
 <section>
 	<%= render "layouts/main" %>
 </section>
 
-<section>
-	<h2>Video Intro span across screen</h2>
-</section>
+<div id="CarouselHome" class="carousel carousel-home slide carousel-fade">
+	<ol class="carousel-indicators"></ol>
+	<div class="carousel-caption"></div>
+	<div class="carousel-inner"></div>
+</div>
 
 
 
