--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,20 +16,34 @@
  *= require bootstrap-social
  */
 
+footer {
+	color: #F0F0F0;
+}
 
  nav {
  	color: #767686;
  }
 
+ .navbar-brand >
+ img {
+ 	margin-top: 10px;
+ }
+
 .navbar-inverse {
 	background-color: #767686;
 	border-color: #767686;
-	height: 70px;
+	height: 80px;
+}
+
+.navbar-inverse
+.navbar-nav > li > a {
+	color: #22231C;
 }
 
 .navbar-nav > li {
-	font-size: 18px;
+	font-size: 20px;
+	font: black;
 	color: #22231C;
-	margin-top: 20px;
-	margin-right: 20px;
+	margin-top: 15px;
+	margin-right: 35px;
 }
