--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -1,21 +1,26 @@
-  <nav class="navbar navbar-inverse" role="navigation">
-    <div class="container">
+ <header>
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only"></span>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
+          <span class="sr-only">Toggle Navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <a class="navbar-brand" href="home.html.erb">
+          <img src="" alt="Houston Judo Academy">
+        </a>
       </div>
 
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-                   <li>Home</li>
-                   <li>Training</li>
-                   <li>About</li>
-                   <li>Contact</li>
+        <div class="collapse navbar-collapse" id="main-nav">
+          <ul class="nav navbar-nav navbar-right">
+                   <li><%= link_to root_url  do  %> Home <% end %></li>
+                   <li><%= link_to training_url  do  %> Training <% end %></li>
+                   <li><%= link_to about_url  do  %> About <% end %></li>
+                   <li><%= link_to contact_url  do  %> Contact <% end %></li>
           </ul>
         </div>
     </div>
   </nav>
+</header>
