--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,71 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+	<script src="/assets/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+    <script src="/assets/bootstrap.min.js" type="text/javascript"></script>
+</head>
+<body>
+
 <section>
 	<%= render "layouts/main" %>
 </section>
 
 <div id="CarouselHome" class="carousel carousel-home slide carousel-fade">
-	<ol class="carousel-indicators"></ol>
-	<div class="carousel-caption"></div>
-	<div class="carousel-inner"></div>
+	<ol class="carousel-indicators">
+		<li data-target="#CarouselHome" data-slide-to="0" class="active"></li>
+		<li data-target="#CarouselHome" data-slide-to="1"></li>
+		<li data-target="#CarouselHome" data-slide-to="2"></li>
+	</ol>
+
+	<div class="carousel-caption">
+		<h1>The Gentle
+		<br class="visible-md">
+		Way
+		</h1>
+	</div>
+
+	<div class="carousel-inner" role="listbox">
+		<div class="item active">
+			<img src="/images/judo.jpg" >
+		</div>
+		<div class="item">
+			<img src="/images/deadlift.png" >
+		</div>
+		<div class="item">	
+			<img src="/images/deadlift.png" >
+		</div>
+	</div>
 </div>
 
+<section class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3" align="center">
+			<h1>Learn Takedowns, grip fighting and ground work with national and world class athletes</h1>
+		</div>
+	</div>
+</section>
 
+<% yield %>
 
+<footer>
+	<%= render "layouts/footer" %>
+</footer>
+
+<script>
+        $(document).ready(function(){
+        	$(".CarouselHome").carousel();
+            $("#CarouselHome").carousel( { interval: 2000 } );
+                          $("#carousel-pause").click(function(){
+                $("#CarouselHome").carousel('pause');
+            });
+                        $("#carousel-play").click(function(){
+                $("#CarouselHome").carousel('cycle');
+            });
+        });
+</script>
+</body>
+
+</html>
 
