--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,22 @@
 <footer>
 	<section class="container">
+	<br />
 		<div class="row">
+			<div class="col-md-4 col-md-offset-2">
+				<h4>Houston Judo Academy</h4>
+				<p class="footer-text">We offer training in takedowns and ground submissions for all levels.
+				Beginners, intermediate and advanced competitive fighters are welcome!</p>
+			</div>
+			<div class="col-md-4 col-md-offset-2">
+				<h4>Contact Us</h4>
+				<i class="fa fa-phone">  281 763 1136</i><br />
+				<br />              
+                <i class="fa fa-envelope"></i>
+                                   <a href="mailto:adnutritionservices@gmail.com"> Email Us</a>
+
+			</div>	
+		</div>
+		<div class="row">			
 			<div class="col-md-12">
                 <p style="padding:10px;"></p>
                 <p class="copyright" align=center>© 2016 Houston Judo Academy</p>
