--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,8 @@
-<%= render "layouts/main" %>
+<section>
+	<%= render "layouts/main" %>
+</section>
+
+
+<footer>
+	<%= render "layouts/footer" %>
+</footer>
