--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,7 @@
-<%= render "layouts/main" %>
+<section>
+	<%= render "layouts/main" %>
+</section>
+
+<footer>
+	<%= render "layouts/footer" %>
+</footer>
