--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,10 @@
 	</ol>
 
 	<div class="carousel-caption">
+		<h1>柔</h1>
+		<h1>
+		道 
+		</h1>
 		<h1>The Gentle
 		<br class="visible-md">
 		Way
@@ -28,21 +32,24 @@
 
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<img src="/images/judo.jpg" >
+			<img src="/images/judo.jpg" width="1280" height="500" >
 		</div>
 		<div class="item">
-			<img src="/images/deadlift.png" >
+			<img src="/images/deadlift.png" width="1280" height="500">
 		</div>
 		<div class="item">	
-			<img src="/images/deadlift.png" >
+			<img src="/images/deadlift.png" width="1280" height="500">
 		</div>
 	</div>
 </div>
 
 <section class="container">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3" align="center">
-			<h1>Learn Takedowns, grip fighting and ground work with national and world class athletes</h1>
+		<div class="col-md-8 col-md-offset-2" align="center">
+			<h2>Learn and Master Takedowns, Grip Fighting Ground Work and Self Defense with National and World Class Athletes</h2>
+			<br />
+			<p align="justify"> Our school focuses on training individuals on perfect technical execution to make their takedowns and submissions effortless. Judokas and martial artists who master their techniques can outlast their opponents because of their little reliance on stamina and physical power. We do not overlook technique at our school, we make sure you do it perfectly. Our technical instruction is combined with sparring sessions which will allow Judokas to execute techniques they have been training on constantly. We combine sparring and technical lessons in order to make you a formidable fighter. In addition we make sure our athletes regularly compete in order to harness their experience mental and physical abilities to be able to execute their techniques under pressure.
+			</p>
 		</div>
 	</div>
 </section>
