--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -8,8 +8,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="home.html.erb">
-          <img src="" alt="Houston Judo Academy">
+        <a class="navbar-brand">
+          <%= link_to root_url do %><img src="" alt="Houston Judo Academy"><% end %>
         </a>
       </div>
 
