Create contact page outline

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,16 @@
 	<%= render "layouts/main" %>
 </section>
 
+<section class="about-page">
+	<section class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Master Song</h2>
+			</div>
+		</div>
+	</section>
+</section>
+
 
 <footer>
 	<%= render "layouts/footer" %>
