--- a/app/views/pages/training.html.erb
+++ b/app/views/pages/training.html.erb
@@ -2,6 +2,49 @@
 	<%= render "layouts/main" %>
 </section>
 
+<section class="training">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3" align="center">
+				<h2>Takedowns</h2>
+				<p>Place video here</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3" align="center">
+				<h2>Groundwork</h2>
+				<p>Place video here</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3" align="center">
+				<h2>Gripfighting</h2>
+				<p>Place video here</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3" align="center">
+				<h2>Sparring</h2>
+				<p align="justify">In order to set up a takedown it is essential to learn grip fighting. We spend a large part of 
+				our training session  </p>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section>
+
+</section>
+
 <footer>
 	<%= render "layouts/footer" %>
 </footer>
