--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,11 @@ a {
  	margin-bottom: 50px;
  }
 
+ div.fill {
+ 	background-position: center;
+ 	background-size: cover;
+ }
+
 footer {
 	background-color: #F0F0F0;
 }
@@ -99,6 +104,15 @@ li {
 	margin-right: 35px;
 }
 
+ input {
+ 	height: 40px;
+ 	font-size: 16px;
+ 	padding: 10px; 	
+ 	border: 1px solid #E6E3DC;
+ 	border-radius: 4px;
+
+ }
+
 p {
 	font-family: 'PT Sans', sans-serif;
 	font-size: 18px;
@@ -111,4 +125,24 @@ p.copyright {
 p.footer-text {
 	color: #777777;
 	font-family: 'PT Sans', sans-serif;
+	font-size: 16px;
+}
+
+section.about-page {
+	margin-top: 130px;
+}
+
+section.contact {
+	margin-top: 130px;
+}
+
+textarea {
+	font-size: 16px;
+	padding: 10px;
+	border: 1px solid #E6E3DC;
+	border-radius: 4px;
+}
+
+section.training {
+	margin-top: 130px;
 }
