--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
 				<p class="footer-text">We offer training in takedowns and ground submissions for all levels.
 				Beginners, intermediate and advanced competitive fighters are welcome!</p>
 			</div>
-			<div class="col-md-4 col-md-offset-2">
+			<div class="col-md-2">
 				<h4>Contact Us</h4>
 				<i class="fa fa-phone">  281 763 1136</i><br />
 				<br />              
@@ -15,6 +15,13 @@
                                    <a href="mailto:adnutritionservices@gmail.com"> Email Us</a>
 
 			</div>	
+
+			<div class="col-md-3">
+			<h4>Schedule</h4>
+				<p class="footer-text">Tuesday: 7-9:00pm</p>
+				<p class="footer-text">Sunday: 5-7:00pm</p>
+				<p class="footer-text">Friday(On call): 9-11:00pm</p>
+			</div>
 		</div>
 		<div class="row">			
 			<div class="col-md-12">
