--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,6 +2,36 @@
 	<%= render "layouts/main" %>
 </section>
 
+<section class="container contact" background="">
+		<div class="row row-content">
+			<div class="col-md-8 col-md-offset-2">
+				<h2 align="center">Please Send us a Mail</h2>
+				<p align="center">Call at 323-347-9736 or send an email and tell us more about yourself and what your goals are. What do you wish to achieve from Judo training?</p> <br/>
+				<form class="form-group">
+					<div class="form-group" align="center">
+						<input type="text" placeholder="First Name" style="width: 509px; height: 40px;" required>
+					</div>
+					<div class="form-group" align="center">
+						<input type="text" name="" placeholder="Last Name" style="width: 509px; height: 40px;" required>
+					</div>
+					<div class="form-group" align="center">
+						<input type="text" name="" placeholder="Email" style="width: 509px; height: 40px;" required>
+					</div>
+					<div class="form-group" align="center">
+						<input type="text" name="" placeholder="Phone Number" style="width: 509px; height: 40px;">
+					</div>
+					<div class="form-group" align="center">
+						<textarea placeholder="What'on your mind?" style="width: 509px; height: 250px;"></textarea>
+					</div>
+					<div class="form-group" align="center">
+						<button type="submit" class="btn btn-primary">Send</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
+
+
 <footer>
 	<%= render "layouts/footer" %>
 </footer>
