--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,13 +32,19 @@
 
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<img src="/images/judo.jpg" width="1280" height="500" >
+			<div class="fill">
+				<img class="img-responsive" src="/images/judo.jpg" width="1280">
+			</div>
 		</div>
 		<div class="item">
-			<img src="/images/deadlift.png" width="1280" height="500">
+			<div class="fill">
+				<img class="img-responsive" src="/images/deadlift.png" width="1280">
+			</div>
 		</div>
 		<div class="item">	
-			<img src="/images/deadlift.png" width="1280" height="500">
+			<div class="fill">
+				<img class="img-responsive" src="/images/deadlift.png" width="1280">
+			</div>
 		</div>
 	</div>
 </div>
@@ -48,7 +54,7 @@
 		<div class="col-md-8 col-md-offset-2" align="center">
 			<h2>Learn and Master Takedowns, Grip Fighting Ground Work and Self Defense with National and World Class Athletes</h2>
 			<br />
-			<p align="justify"> Our school focuses on training individuals on perfect technical execution to make their takedowns and submissions effortless. Judokas and martial artists who master their techniques can outlast their opponents because of their little reliance on stamina and physical power. We do not overlook technique at our school, we make sure you do it perfectly. Our technical instruction is combined with sparring sessions which will allow Judokas to execute techniques they have been training on constantly. We combine sparring and technical lessons in order to make you a formidable fighter. In addition we make sure our athletes regularly compete in order to harness their experience mental and physical abilities to be able to execute their techniques under pressure.
+			<p align="justify"> Our Judo school focuses on training individuals on perfect technical execution to make their takedowns and submissions effortless. We do not overlook technique at our school, we make sure you do it perfectly. We combine technical instruction with sparring sessions which will allow Judokas to practice techniques they have been training on constantly. In addition we make sure our athletes regularly compete in order to harness their experience mental and physical abilities to be able to execute their techniques under pressure. You do not need any experience to join us. Join us and train hard to become a great martial artist!
 			</p>
 		</div>
 	</div>
